# control

./: .checkpatch.conf  .clang-tidy  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CODEOWNERS  Doxyfile.in  Kconfig.control  LICENSE  README.md  VERSION  contents.toml.in  west.yml
.github/workflows/: ci.yml
cmake/: clang-tidy.cmake  configure_tidy.cmake
cmake/toolchain/: clang.cmake
data/: HangingLoad.csv  MotorRotation.csv  MultivariableCylinders.csv
doc/: CMakeLists.txt  Doxyfile.in  contents.toml.in  index.adoc  packages.toml.in
doc/ai/: a_star.adoc  index.adoc  inpolygon.adoc
doc/dynamics/: c2d.adoc  index.adoc  kalman.adoc  lqi.adoc  mpc.adoc  mrac.adoc  pid.adoc  stability.adoc  theta2ss.adoc
doc/filter/: filtfilt.adoc  index.adoc  mcs.adoc  sqr_ukf.adoc
doc/linalg/: add.adoc  balance.adoc  chol.adoc  cholupdate.adoc  det.adoc  dlyap.adoc  eig.adoc  eig_sym.adoc  expm.adoc  hankel.adoc  index.adoc  inv.adoc  linsolve_chol.adoc  linsolve_gauss.adoc  linsolve_lower_triangular.adoc  linsolve_lup.adoc  linsolve_markov.adoc  linsolve_qr.adoc  linsolve_upper_triangular.adoc  lup.adoc  mul.adoc  nonlinsolve.adoc  norm.adoc  pinv.adoc  qr.adoc  sum.adoc  svd_golub_reinsch.adoc  svd_jacobi_one_sided.adoc  tran.adoc
doc/misc/: cat.adoc  constrain.adoc  cut.adoc  index.adoc  insert.adoc  mean.adoc  print.adoc  randn.adoc  sign.adoc  stddev.adoc
doc/model/: dc_motor.adoc  index.adoc
doc/motion/: index.adoc  motion_profile.adoc
doc/motion_profile/: index.adoc
doc/motor/: clarke.adoc  index.adoc  park.adoc
doc/optimization/: index.adoc  linprog.adoc
doc/sysid/: era.adoc  index.adoc  okid.adoc  okid_era.adoc  rls.adoc  sqr_ukf_id.adoc
doc/theme/: README.adoc
include/control/: ai.h  controller.h  dynamics.h  filter.h  linalg.h  misc.h  model.h  motion.h  motor.h  optimization.h  sysid.h
include/control/model/: dc_motor.h
integrity/: DocChecker.py  ai.robot  documentation.robot  dynamics.robot  filter.robot  linalg.robot  misc.robot  model.robot  module.robot  motion.robot  motor.robot  optimization.robot  spdx.robot  sysid.robot  top-level.robot
octave/control/: README.md  acker.m  allmargin.m  append.m  are.m  balreal.m  bode.m  bodemag.m  c2d.m  c2dt.m  covar.m  ctrb.m  d2c.m  d2d.m  damp.m  db2mag.m  dbdrop.m  dcgain.m  evalfr.m  feedback.m  findmaxgain.m  freqresp.m  gensig.m  gram.m  hsvd.m  imc.m  impulse.m  initial.m  lmpc.m  loop.m  lqe.m  lqgreg.m  lqi.m  lqr.m  lsim.m  lyap.m  mag2db.m  margin.m  minreal.m  modred.m  (+28 more)
octave/systemid/: eradc.m  filtfilt2.m  ica.m  idbode.m  moesp.m  n4sid.m  ocid.m  okid.m  pimoesp.m  rls.m  rpca.m  sindy.m  spa.m  sr_ukf_parameter_estimation.m  sr_ukf_state_estimation.m  svm.m
pictures/: examples.md
pictures/SR-UKF/: sr-ukf-parameter-estimation.m  sr-ukf-state-estimation.m
scripts/: build  check  checkpatch.pl  coverage  fix  init  sort-codeowners  spdx.robot  test
scripts/ci/: check-file-sorted  check-links  check_compliance.py  pylintrc  test_plan.py
src/: CMakeLists.txt  Kconfig
src/ai/: Astar.c  a_star.c  inpolygon.c
src/controller/: c2d.c  kalman.c  lqi.c  mpc.c  mrac.c  pid.c  stability.c  theta2ss.c
src/dynamics/: c2d.c  kalman.c  lqi.c  mpc.c  mrac.c  pid.c  pid.m  stability.c  theta2ss.c
src/filter/: filtfilt.c  mcs.c  sqr_ukf.c  sr_ukf_state_estimation.c
src/linalg/: add.c  balance.c  chol.c  cholupdate.c  det.c  dlyap.c  eig.c  eig_sym.c  expm.c  hankel.c  inv.c  linsolve_chol.c  linsolve_gauss.c  linsolve_lower_triangular.c  linsolve_lup.c  linsolve_markov.c  linsolve_qr.c  linsolve_upper_triangular.c  lup.c  mul.c  nonlinsolve.c  norm.c  pinv.c  qr.c  sum.c  svd_golub_reinsch.c  svd_jacobi_one_sided.c  tran.c
src/misc/: cat.c  constrain.c  cut.c  insert.c  mean.c  print.c  randn.c  saturation.c  sign.c  stddev.c  vmax.c  vmin.c
src/model/: dc_motor.c  dc_motor.m
src/motion/: motion_profile.c
src/motor/: clarke.c  park.c
src/optimization/: linprog.c  linprog.m
src/sysid/: era.c  okid.c  okid_era.c  rls.c  sqr_ukf_id.c  sr_ukf_parameter_estimation.c
tests/: CMakeLists.txt
tests/ai/: CMakeLists.txt  a_star.cpp  inpolygon.cpp  prj.conf  testcase.yaml
tests/ai/src/: main.c
tests/controller/: CMakeLists.txt  kalman.m  lqi.m  testcase.yaml
tests/controller/src/: main.c
tests/dynamics/: CMakeLists.txt  c2d.cpp  kalman.cpp  kalman.m  lqi.cpp  lqi.m  mpc.cpp  mrac.cpp  pid.cpp  pid.m  stability.cpp  theta2ss.cpp
tests/filter/: CMakeLists.txt  filtfilt.cpp  mcs.cpp  sqr_ukf.cpp  testcase.yaml
tests/filter/src/: main.c
tests/linalg/: CMakeLists.txt  add.cpp  balance.cpp  chol.cpp  cholupdate.cpp  det.cpp  dlyap.cpp  eig.cpp  eig_sym.cpp  expm.cpp  hankel.cpp  inv.cpp  linsolve_chol.cpp  linsolve_gauss.cpp  linsolve_lower_triangular.cpp  linsolve_lup.cpp  linsolve_markov.cpp  linsolve_qr.cpp  linsolve_upper_triangular.cpp  lup.cpp  main.cpp  mul.cpp  nonlinsolve.cpp  norm.cpp  pinv.cpp  qr.cpp  sum.cpp  svd_golub_reinsch.cpp  svd_jacobi_one_sided.cpp  testcase.yaml  tran.cpp
tests/linalg/src/: main.c
tests/misc/: CMakeLists.txt  cat.cpp  constrain.cpp  cut.cpp  insert.cpp  mean.cpp  print.cpp  randn.cpp  sign.cpp  stddev.cpp
tests/misc/src/: main.c
tests/model/: CMakeLists.txt  dc_motor.cpp
tests/motion/: CMakeLists.txt  motion_profile.cpp
tests/motion/src/: MotionProfileTest.cpp
tests/motor/: CMakeLists.txt  clarke.cpp  main.cpp  park.cpp
tests/optimization/: CMakeLists.txt  linprog.cpp
tests/optimize/: CMakeLists.txt  testcase.yaml
tests/optimize/src/: main.c
tests/sysid/: CMakeLists.txt  era.cpp  okid.cpp  okid_era.cpp  okid_era.m  rls.cpp  sqr_ukf_id.cpp
tests/sysid/src/: main.c
theme/: Rakefile  tutorial.yml
zephyr/: CMakeLists.txt  Kconfig  module.yml
